[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/blue_duck.png" type="Texture" id=1]
[ext_resource path="res://Duck.gd" type="Script" id=2]
[ext_resource path="res://Sprites/red_duck.png" type="Texture" id=3]
[ext_resource path="res://Sprites/green_duck.png" type="Texture" id=4]
[ext_resource path="res://Sounds/quack.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/quack_3.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/quack_2.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.3929, 32.2992 )

[sub_resource type="Animation" id=2]
resource_name = "PickedDown"
length = 0.25
tracks/0/type = "bezier"
tracks/0/path = NodePath("DuckSprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DuckSprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}

[sub_resource type="Animation" id=3]
resource_name = "PickedUp"
length = 0.25
tracks/0/type = "bezier"
tracks/0/path = NodePath("DuckSprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DuckSprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}

[node name="Duck" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DuckSprite" type="Node2D" parent="."]

[node name="Red" type="Sprite" parent="DuckSprite"]
visible = false
texture = ExtResource( 3 )

[node name="Green" type="Sprite" parent="DuckSprite"]
visible = false
texture = ExtResource( 4 )

[node name="Blue" type="Sprite" parent="DuckSprite"]
visible = false
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PickedDown = SubResource( 2 )
anims/PickedUp = SubResource( 3 )

[node name="RedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BlueSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="GreenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Duck_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Duck_input_event"]
